<resources>
    <string name="app_name">CollegeBuddy</string>
    <string name="Login">Login</string>
    <string name="Logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="setting">Setting</string>
    <string name="Pick_Usernme">Pick your username</string>
    <string name="username">Username</string>
    <string name="Password">Password</string>
    <string name="Timetable">Timetable</string>
    <string name="Attendance">Attendance</string>
    <string name="Syllabus">Syllabus</string>
    <string name="Event">Event</string>
    <string name="Notification">Notification</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>


    <string name="timetable">Timetable</string>
    <string name="syllabus">Syllabus</string>
    <string name="attendance">Attendance</string>
    <string name="event">Events</string>
    <string name="Notifications">Notifications</string>

    <string name="nav_header_title">College Buddy</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="Profile">Profile</string>
    <string name="Share">Share</string>
    <string name="about_us">About Us</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="validate_username">Create Username</string>
    <string name="already_user">Already User?</string>
    <string name="registration">Registration</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register">Register</string>
    <string name="enter_email">Enter Email</string>
    <string name="title_home">Home</string>
    <string name="email">Email id</string>
    <string name="roll_no">Roll No</string>
    <string name="title_activity_stlogin">STLogin</string>
    <string name="enter_name">Enter Name</string>
    <string name="notice">Notice</string>
    <string name="title_activity_notice">NoticeActivity</string>
    <string name="department">Department</string>
    <string name="enter_password">Enter Password</string>
    <string name="title_activity_teacher_notice">TeacherNoticeActivity</string>
    <string name="update_profile">Update Profile</string>
    <string name="update_password">Change Password</string>
    <string name="privacy_policy"><u>Privacy Policy</u></string>
    <string name="terms_and_conditions"><u>Terms and Conditions</u></string>
</resources>
