<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_Timetable"
            android:title="@string/timetable" />
        <item
            android:id="@+id/nav_attendance"
            android:title="@string/attendance" />
        <item
            android:id="@+id/nav_syllabus"
            android:title="@string/syllabus" />
        <item
            android:id="@+id/nav_events"
            android:title="@string/event" />
        <item
            android:id="@+id/nav_notifications"
            android:title="@string/Notifications"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:title="@string/Share" />
            <item
                android:id="@+id/nav_aboutUs"
                android:title="@string/about_us" />

        </menu>
    </item>

</menu>
