<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_timetable"
        android:icon="@drawable/timetable"
        android:title="@string/Timetable"/>
    <item
        android:id="@+id/menu_attendance"
        android:icon="@drawable/attendance"
        android:title="@string/Attendance"/>

    <item
        android:id="@+id/menu_syllabus"
        android:icon="@drawable/syllabus"
        android:title="@string/Syllabus"/>

    <item
        android:id="@+id/menu_event"
        android:icon="@drawable/event"
        android:title="@string/Event"/>

    <item
        android:id="@+id/menu_notification"
        android:icon="@drawable/notification"
        android:title="@string/Notification"/>

</menu>