<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">


    <TextView
        android:id="@+id/LoginText"
        android:layout_width="match_parent"
        android:layout_height="77dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:fontFamily="@font/faitorough"
        android:gravity="center"
        android:text="@string/Login"
        android:textColor="@color/colorAccent"
        android:textSize="55sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_pickuser"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@id/LoginText"
        android:layout_marginTop="35dp"
        android:textColor="@color/colorAccent"
        android:text="@string/Pick_Usernme"
        android:gravity="start"
        android:textSize="20sp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textStyle="bold"/>


    <LinearLayout
        android:id="@+id/picker"
        android:theme="@style/AppTheme.NoActionBar"
        android:layout_below="@id/tv_pickuser"
        android:layout_width="match_parent"
        android:layout_height="110dp">

        <NumberPicker
            android:id="@+id/std_year"
            android:layout_width="70dp"
            android:layout_height="120dp"
            android:layout_marginStart="20dp">

        </NumberPicker>
        <NumberPicker
            android:id="@+id/std_branch"
            android:layout_width="90dp"
            android:layout_height="120dp"
            android:layout_marginStart="20dp">

        </NumberPicker>

        <NumberPicker
            android:id="@+id/std_div"
            android:layout_width="50dp"
            android:layout_height="120dp"
            android:layout_marginStart="20dp">

        </NumberPicker>

        <EditText
            android:id="@+id/std_rollno"
            android:layout_width="70dp"
            android:layout_height="79dp"
            android:layout_marginStart="18dp"
            android:lines="1"
            android:layout_gravity="center"
            android:hint="@string/roll_no"
            android:textSize="15sp"
            android:gravity="center"
            android:inputType="numberDecimal"
            tools:ignore="Autofill" />

    </LinearLayout>

    <Button
        android:id="@+id/validate_username"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/picker"
        android:layout_marginTop="10dp"
        android:layout_margin="10dp"
        android:background="@color/colorAccent"
        android:textColor="#fff"
        android:text="@string/validate_username"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/txt_username"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/username"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/colorAccent"
        android:layout_below="@id/validate_username"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"/>

    <EditText
        android:id="@+id/etv_email"
        android:layout_width="330dp"
        android:layout_marginStart="15dp"
        android:layout_height="40dp"
        android:lines="1"
        android:inputType="textEmailAddress"
        android:layout_below="@id/txt_username"
        android:hint="@string/enter_email"
        android:layout_marginTop="15dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        tools:ignore="Autofill" />


    <EditText
        android:id="@+id/etv_password"
        android:layout_width="330dp"
        android:layout_marginStart="15dp"
        android:layout_height="40dp"
        android:layout_below="@id/etv_email"
        android:lines="1"
        android:inputType="textPassword"
        android:layout_marginTop="15dp"
        android:hint="@string/enter_password"
        android:paddingStart="@dimen/tendp"
        android:paddingEnd="10dp"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@id/etv_password"
        android:layout_margin="15dp"
        android:layout_centerInParent="true"
        android:background="@color/colorAccent"
        android:textColor="#fff"
        android:text="@string/Login"
        android:textSize="17sp"/>

    <TextView
        android:id="@+id/attempts"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:gravity="center"
        android:layout_below="@id/btn_login" />

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/attempts"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:paddingStart="10dp"
        android:text="@string/registration"
        android:textColor="@color/colorAccent"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/forgotpassword"
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/attempts"
        android:layout_marginEnd="@dimen/tendp"
        android:gravity="center"
        android:paddingEnd="1dp"
        android:paddingStart="1dp"
        android:text="@string/forgot_password"
        android:textColor="@color/colorAccent"
        android:textSize="17sp"
        tools:ignore="RelativeOverlap" />

</RelativeLayout>