<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginTeacherActivity">

    <TextView
        android:id="@+id/t_dep_sel"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="150dp"
        android:text="@string/department"
        android:textStyle="bold"
        android:gravity="center_vertical"
        android:textSize="15dp"
        android:paddingStart="15dp"
        android:layout_alignParentStart="true"
        android:textColor="@color/colorAccent" />

    <Spinner
        android:id="@+id/s_dept"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="150dp"
        android:layout_toRightOf="@+id/t_dep_sel"
        android:paddingStart="10dp" />

    <TextView
        android:id="@+id/t_teacher_name"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:text="Teacher Name"
        android:textStyle="bold"
        android:gravity="center_vertical"
        android:textSize="15dp"
        android:paddingStart="10dp"
        android:layout_below="@+id/s_dept"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorAccent" />

    <Spinner
        android:id="@+id/s_teacher"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginLeft="30dp"
        android:layout_toRightOf="@id/t_dep_sel"
        android:layout_below="@+id/t_dep_sel"
        android:layout_marginTop="10dp"
        android:paddingStart="10dp" />

    <EditText
        android:id="@+id/et_t_pass"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:hint="@string/enter_password"
        android:layout_below="@+id/s_teacher"
        android:layout_marginTop="30dp"
        android:layout_centerInParent="true"
        android:inputType="textPassword"
        tools:ignore="Autofill"
        android:lines="1"
        android:textColorHint="@color/colorAccent"/>

    <Button
        android:id="@+id/t_login"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:text="@string/Login"
        android:layout_below="@+id/et_t_pass"
        android:layout_centerInParent="true"
        android:layout_marginTop="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/rounded_btns"
        android:textColor="#fff"
        android:textSize="22dp"
        android:fontFamily="@font/faitorough"/>
</RelativeLayout>